--- a/Modules/Edu/package.json
+++ b/Modules/Edu/package.json
@@ -19,8 +19,9 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "codemirror": "^5.59.4",
-        "highlight.js": "^10.5.0",
+        "@toast-ui/editor": "^2.5.1",
+        "codemirror": "^5.60.0",
+        "highlight.js": "^10.7.1",
         "laravel-mix-merge-manifest": "v2",
         "postcss-import": "^14.0.0",
         "xgplayer": "^2.17.12"
