--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "2.2.2",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "3.1.0",
         "tailwindcss": "^2.0.2",
@@ -22,9 +21,9 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@toast-ui/editor": "^2.5.1",
         "dayjs": "^1.10.4",
-        "element-ui": "^2.15.0",
+        "element-ui": "^2.15.1",
+        "lodash": "^4.17.21",
         "postcss-import": "^14.0.0",
         "sass": "^1.32.5",
         "sass-loader": "^10.1.1",
@@ -32,6 +31,7 @@
         "vue-router": "^3.5.0",
         "vuedraggable": "^2.24.3",
         "vuex": "^3.6.2",
-        "wangeditor": "^4.6.9"
+        "wangeditor": "^4.6.12",
+        "webpack-bundle-analyzer": "^4.4.0"
     }
 }
