--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/modules/Article/js/app.js": "/modules/Article/js/app.js",
+    "/modules/Article/css/app.css": "/modules/Article/css/app.css",
+    "/modules/Article/static/preview.jpeg": "/modules/Article/static/preview.jpeg"
 }
