--- a/public/modules/Article/template/default/uniapp/manifest.json
+++ b/public/modules/Article/template/default/uniapp/manifest.json
@@ -1,9 +1,9 @@
 {
     "name" : "article",
-    "appid" : "__UNI__07E0986",
-    "description" : "",
+    "appid" : "__UNI__421C4AD",
+    "description" : "文章系统",
     "versionName" : "1.0.0",
-    "versionCode" : "100",
+    "versionCode" : 1,
     "transformPx" : false,
     /* 5+App特有相关 */
     "app-plus" : {
@@ -52,7 +52,9 @@
     "mp-weixin" : {
         "appid" : "",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "es6" : true,
+            "postcss" : true
         },
         "usingComponents" : true
     },
