--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "graham-campbell/markdown": "^13.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "hisorange/browser-detect": "^4.4",
+        "intervention/image": "^2.5",
         "laravel-lang/lang": "~7.0",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.8",
@@ -31,6 +32,7 @@
         "socialiteproviders/weixin": "^4.1",
         "socialiteproviders/weixin-web": "^4.1",
         "socialiteproviders/zoho": "^4.1",
+        "spatie/image": "^1.10",
         "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-permission": "^4.0",
         "yansongda/pay": "^2.10"
